fixed bugs in sex-notebook analysis and selecte() function [now throwing an error]

--- a/vignettes/curatedMetagenomicData 3 CLI interface, sex-contrast microbiome meta-analysis.ipynb
+++ b/vignettes/curatedMetagenomicData 3 CLI interface, sex-contrast microbiome meta-analysis.ipynb
@@ -33,7 +33,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "Rscript -e \"utils::install.packages('BiocManager')\"\n",
+    "Rscript -e \"utils::install.packages('BiocManager', repos = 'http://cran.us.r-project.org')\"\n",
     "Rscript -e \"BiocManager::install('waldronlab/curatedMetagenomicDataCLI')\"\n",
     "Rscript -e \"curatedMetagenomicDataCLI::install()\""
    ]
@@ -115,7 +115,8 @@
    "source": [
     "mkdir species_abundances_from_cMD3CLI\n",
     "cd species_abundances_from_cMD3CLI\n",
-    "curatedMetagenomicData -m \"*relative_abundance\" "
+    "curatedMetagenomicData -m \"*relative_abundance\"\n",
+    "cd .."
    ]
   },
   {
@@ -135,12 +136,12 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "git clone https://github.com/waldronlab/curatedMetagenomicAnalyses.git"
+    "# git clone https://github.com/waldronlab/curatedMetagenomicAnalyses.git"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,14 +351,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'input_folder': 'species_abundances_from_cMD3CLI/', 'output_dataset': 'a_dataset_for_the_sex_contrast_in_gut_species.tsv', 'min': ['age:16'], 'max': [], 'cat': ['study_condition:control', 'body_site:stool'], 'multiple': -1, 'min_perc': ['gender:25'], 'cfd': ['BMI'], 'iqr': [], 'minmin': 'gender:40', 'study_identifier': 'study_name', 'verbose': False, 'debug': False, 'binary': [], 'search': [], 'exclude': []}\n"
+      "{'input_folder': 'species_abundances_from_cMD3CLI2/', 'output_dataset': 'a_dataset_for_the_sex_contrast_in_gut_species.tsv', 'min': ['age:16'], 'max': [], 'cat': ['study_condition:control', 'body_site:stool'], 'multiple': -1, 'min_perc': ['gender:25'], 'cfd': ['BMI'], 'iqr': [], 'minmin': 'gender:40', 'study_identifier': 'study_name', 'verbose': False, 'debug': False, 'binary': [], 'search': [], 'exclude': []}\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "We are sorry: apparently your search is too detailed for this package, and we can't provide any sample with the desired characteristics Exiting",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-da87ba6ff1df>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m## distingushed from metadata based on the \"feat-id\" keyword.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mselect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/Documents/Job/python_notebooks/curatedMetagenomicAnalyses/python_tools/meta_analysis_data.py\u001b[0m in \u001b[0;36mselect\u001b[0;34m(args)\u001b[0m\n\u001b[1;32m    334\u001b[0m         \u001b[0mmadata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"output_dataset\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msep\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"\\t\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mheader\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    335\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 336\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mIndexError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"We are sorry: apparently your search is too detailed for this package, and we can't provide any sample with the desired characteristics Exiting\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    337\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    338\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: We are sorry: apparently your search is too detailed for this package, and we can't provide any sample with the desired characteristics Exiting"
      ]
     }
    ],
@@ -416,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
