Fixed wording in notebook

--- a/vignettes/curatedMetagenomicData 3 CLI interface, sex-contrast microbiome meta-analysis.ipynb
+++ b/vignettes/curatedMetagenomicData 3 CLI interface, sex-contrast microbiome meta-analysis.ipynb
@@ -31,7 +31,7 @@
     "2. go in that directory\n",
     "3. download all the taxonomic profiles using `curatedMetagenomicDataCLI`\n",
     "\n",
-    "The step 3 may take some time."
+    "Step 3 may take some time."
    ]
   },
   {
